--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@mdi/js": "^5.6.55",
