--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "synx-domain",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "mocha  \"./src/**/*.spec.js\""
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "fast-xml-parser": "^4.0.6",
     "html-entities": "^2.3.2",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
